[package]
name = "lang-def"
version = "0.1.0"
edition = "2021"

[dependencies]
temp-inst = { git = "https://github.com/SReichelt/temp-inst.git", features = [
    "derive",
] }
compact_str = "0.8.0"
nonminmax = { git = "https://github.com/stijnh/nonminmax.git" }
smallvec = { version = "1.13.2", features = ["union", "const_generics"] }
